[package]
name = "github-label-feed"
version = "0.1.0"
authors = ["tilpner <till@hoeppner.ws>"]
edition = "2018"

[dependencies]
graphql_client = { version = "0.9", default-features = false, features = [ "log" ] }
serde = "1.0"
reqwest = { version = "0.10", features = [ "json" ] }
structopt = "0.3"
chrono = "0.4"
url = "2.1"

futures = "0.3"
smol = { version = "0.1", features = [ "tokio02" ] }
futures-retry = "0.5"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "sqlite", "macros" ] }

anyhow = "1.0"

# sqlx pretty-prints all queries with sqlformat to log, which is very expensive
log = { version = "0.4", features = [ "max_level_off", "release_max_level_off" ] }
tracing = "0.1"
tracing-subscriber = "0.2.4"

atom_syndication = "0.9"
rss = "1.9"
